# claude-opensearch-integration

./: .gitignore  CLAUDE.md  KNOWLEDGE.md  README.md  blog-post.md  get-cookies.py  init.sh
.claude/skills/opensearch/: SKILL.md
opensearch-mcp/: README.md  clusters.py  server.py
opensearch-mcp-wrapper/: KNOWLEDGE.md  README.md  get-cookies.py  get_cookie.py  pyproject.toml  server.py
