[project]
name = "opensearch-mcp-cookie-auth"
version = "0.1.0"
description = "OpenSearch MCP Server with Cookie Authentication for OpenID/OAuth protected clusters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
opensearch-mcp-cookie-auth = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
